--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "2.0.2",
   "type": "module",
+  "homepage": "/app",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
