--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "preview4000": "vite preview --port 4000",
     "build2": "vite build"
   },
   "dependencies": {
